[package]
name = "riscv_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
lsp-types = "0.94.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
