[package]
name = "riscv_analysis"
version = "0.1.0"
edition = "2021"
description = "RISC-V static analysis tools"
authors = ["Rajan Maghera"]
repository = "https://github.com/rajanmaghera/riscv-analysis"
license-file = "LICENSE"
keywords = ["riscv", "static analysis", "binary analysis", "risc-v"]
categories = ["static analysis", "binary analysis", "risc-v"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
itertools = "0.11.0"
lsp-types = "0.94.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
getrandom = { version = "0.2", features = ["js"] }
clap = { version = "4.3.8", features = ["derive"] }

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
