[package]
name = "riscv_analysis"
version = "0.1.0-alpha"
edition = "2021"
description = "RISC-V static analysis tools"
authors = ["Rajan Maghera"]
repository = "https://github.com/rajanmaghera/riscv-analysis"
license = "GPL-3.0"
keywords = ["riscv", "static analysis", "binary analysis", "risc-v"]
categories = ["static analysis", "binary analysis", "risc-v"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.11.0"
lsp-types = "0.94.0"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
serde_repr = "0.1"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
