[package]
name = "riscv_analysis_cli"
version = "0.1.0-alpha"
edition = "2021"
description = "RISC-V static analysis tool -- CLI"
authors = ["Rajan Maghera"]
repository = "https://github.com/rajanmaghera/riscv-analysis"
license = "GPL-3.0"
keywords = ["riscv", "static-analysis", "binary-analysis", "risc-v"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "rva"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv_analysis = { path = "../riscv_analysis", version = "0.1.0-alpha" }
clap = { version = "4.3.8", features = ["derive"] }
serde_yaml = "0.9"
bat = "0.24.0"
colored = "2.0.4"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

