[package]
name = "riscv_analysis_lsp"
version = "0.1.0-alpha.2"
edition = "2021"
description = "RISC-V static analysis tool -- LSP helpers"
authors = ["Rajan Maghera"]
repository = "https://github.com/rajanmaghera/riscv-analysis"
license = "GPL-3.0"
keywords = ["riscv", "static-analysis", "binary-analysis", "risc-v"]
categories = ["compilers", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv_analysis = { path = "../riscv_analysis", version = "0.1.0-alpha.2"}
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6"
lsp-types = "0.94.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
