[package]
name = "riscv_analysis_arm"
version = "0.1.0-alpha"
edition = "2021"
description = "ARM specific code for RVA"
authors = ["Nathan Ulmer"]
repository = "https://github.com/rajanmaghera/riscv-analysis"
license = "GPL-3.0"

[build-dependencies]
cmake = "0.1"

[dependencies]
riscv_analysis = { path = "../../riscv_analysis" }
