[package]
name = "riscv_analysis_arm"
version = "0.1.0-alpha"
edition = "2021"
description = "ARM specific code for RVA"
authors = ["Nathan Ulmer"]
repository = "https://github.com/rajanmaghera/riscv-analysis"
license = "GPL-3.0"

[build-dependencies]
cmake = "0.1"

[dependencies]
riscv_analysis = { path = "../../riscv_analysis" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
